--- a/demos/publish/index.html
+++ b/demos/publish/index.html
@@ -3,51 +3,11 @@
 <head>
     <meta charset=utf-8>
     <!--
-     | Copyright 2018 Esri
-     |
-     | Licensed under the Apache License, Version 2.0 (the "License");
-     | you may not use this file except in compliance with the License.
-     | You may obtain a copy of the License at
-     |
-     |    http://www.apache.org/licenses/LICENSE-2.0
-     |
-     | Unless required by applicable law or agreed to in writing, software
-     | distributed under the License is distributed on an "AS IS" BASIS,
-     | WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     | See the License for the specific language governing permissions and
-     | limitations under the License.
+     | Copyright (c) 2018 Esri
+     | Apache-2.0
     -->
   <title>Publish solution template</title>
-  <style>
-  html {
-    font-family: Arial;
-  }
-  .section {
-    margin: 8px 0 8px 0;
-    border: 1px solid gray;
-    padding: 8px;
-  }
-  .section-title {
-    font-size: larger;
-    margin-bottom: 12px;
-  }
-  ul {
-    margin: 0;
-    margin-top: 0.25em;
-  }
-  .solutionList {
-    list-style-type: none;
-  }
-  li {
-    margin-top: 0.25em;
-  }
-  a {
-    color: dodgerblue;
-  }
-  a:link {
-    color: dodgerblue;
-  }
-  </style>
+  <link rel="stylesheet" type="text/css" href="../demo_common/common.css">
 </head>
 <body>
   <h3>Publish solution template</h3>
@@ -75,7 +35,7 @@
 
     <div id="create" class="section" style="display:none">
       <div class="section-title">Solution ready for publishing</div>
-      <img id="creating" src="loading.gif"/>
+      <img id="creating" src="../demo_common/images/loading.gif"/>
       <div id="createResults" style="display:none">
         <div id="createDisplay"></div>
         <br>
@@ -86,7 +46,7 @@
 
     <div id="display" class="section" style="display:none">
       <div class="section-title">Published Solution details</div>
-      <img id="fetchingDetails" src="loading.gif"/>
+      <img id="fetchingDetails" src="../demo_common/images/loading.gif"/>
       <div id="detailsResults" style="display:none">
         <div id="detailsDisplay"></div>
       </div>
@@ -94,14 +54,20 @@
 
   </div>
 
-  <script src="require_2.3.6.min.js"></script>
+  <script src="../demo_common/require_2.3.6.min.js"></script>
   <script>
   var createSolutionFcn = publishSolutionFcn = null;
 
+  /**
+   * Makes the 'Create' button's available if one or more source items are checked.
+   */
   function onCheckboxClicked() {
     document.getElementById('createBtn').disabled = getCheckedItems().length === 0 ? 'disabled' : '';
   }
 
+  /**
+   * Gets the list of checked source items from the UI.
+   */
   function getCheckedItems() {
     var checkedItems = [];
     Array.prototype.slice.call(document.getElementsByTagName('input')).forEach(function (item) {
@@ -114,7 +80,10 @@
 
   requirejs.config({
     baseUrl: './',
-    paths: {  // for the benefit of called libraries
+    paths: {
+      // for the benefit of arcgis-clone-js
+      'tslib': '../demo_common/tslib',
+      // for the benefit of called libraries that use arcgis-rest-auth
       '@esri/arcgis-rest-auth': 'https://unpkg.com/@esri/arcgis-rest-auth@1.11.1/dist/umd/auth.umd',
       '@esri/arcgis-rest-feature-service-admin':
         'https://unpkg.com/@esri/arcgis-rest-feature-service-admin@1.11.1/dist/umd/feature-service-admin.umd',
@@ -126,36 +95,41 @@
   });
   requirejs([
     '../../dist/src/index',
+    '../demo_common/common',
     '@esri/arcgis-rest-auth',
     '@esri/arcgis-rest-items',
     '@esri/arcgis-rest-request'
   ], function (
     clone,
+    demoCommon,
     auth,
     items,
     request
   ) {
     createSolutionFcn = createSolution;
     publishSolutionFcn = publishSolution;
-    var requestOptions, orgUrl, portal, solution, publishedSolutionId;
+    var requestOptions, orgUrl, portalUrl, solution;
 
     document.getElementById('page').style.display = 'block';
 
     //----------------------------------------------------------------------------------------------------------------//
 
+    /**
+     * Creates a solution from a set of existing AGOL items
+     */
     function createSolution() {
       document.getElementById('createBtn').disabled = 'disabled';
       document.getElementById('create').style.display = 'block';
 
       // Prepare credentials for library
-      requestOptions = getRequestOptions('username', 'password');
+      requestOptions = demoCommon.getRequestOptions('username', 'password');
 
       // Get the publisher's organization URL for creating links to source items
       request.getPortal(null, requestOptions)
       .then(
         function (response) {
           orgUrl = 'https://' + response.urlKey + '.' + response.customBaseUrl + '/home/';
-          portal = 'https://' + response.portalHostname + '/';
+          portalUrl = 'https://' + response.portalHostname + '/';
 
           // Get the items to include in the solution
           var solutionRootIds = getCheckedItems();
@@ -165,11 +139,11 @@
           .then(function (solutionResponse) {
             solution = solutionResponse;
             document.getElementById('createDisplay').innerHTML = 'Source hierarchy:' +
-              createHierarchyDisplay(solution, clone.Solution.getItemHierarchy(solution), true, orgUrl);
+              demoCommon.createHierarchyDisplay(solution, clone.Solution.getItemHierarchy(solution), true, orgUrl);
           }, function (error) {
              document.getElementById('createDisplay').innerHTML = error.toString();
           })
-          .finally(function () {
+          .finally(() => {
             document.getElementById('creating').style.display = 'none';
             document.getElementById('createResults').style.display = 'block';
           });
@@ -181,6 +155,9 @@
       );
     }
 
+    /**
+     * Creates a solution item in the user's organization.
+     */
     function publishSolution() {
       document.getElementById('publishBtn').disabled = 'disabled';
       document.getElementById('display').style.display = 'block';
@@ -189,87 +166,27 @@
       var solutionName = document.getElementById('solutionName').value || 'Solution';
       clone.Solution.publishItemJSON(solutionName, solution, 'public', requestOptions)
       .then(function (publishResponse) {
-        publishedSolutionId = publishResponse.id;
+        var publishedSolutionId = publishResponse.id;
 
         items.getItemData(publishedSolutionId, requestOptions)
         .then(
           publishedSolution => {
             document.getElementById('detailsDisplay').innerHTML =
-              createItemLinksDisplay(publishedSolutionId, orgUrl, portal) +
+              demoCommon.createItemLinksDisplay(publishedSolutionId, orgUrl, portalUrl) +
               '<br>Published Solution item hierarchy:' +
-              createHierarchyDisplay(publishedSolution.items, clone.Solution.getItemHierarchy(publishedSolution.items));
+              demoCommon.createHierarchyDisplay(publishedSolution.items, clone.Solution.getItemHierarchy(publishedSolution.items));
           }
         );
       }, function (error) {
          document.getElementById('detailsDisplay').innerHTML = error.toString();
       })
-      .finally(function () {
+      .finally(() => {
         document.getElementById('fetchingDetails').style.display = 'none';
         document.getElementById('detailsResults').style.display = 'block';
       });
     }
 
     //----------------------------------------------------------------------------------------------------------------//
-
-    function getRequestOptions(usernameElementId, passwordElementId) {
-      return {
-        authentication: new auth.UserSession({
-          username: document.getElementById(usernameElementId).value,
-          password: document.getElementById(passwordElementId).value
-        })
-      };
-    }
-
-    function createHierarchyDisplay(solutionItems, hierarchy, createLinks, orgUrl) {
-      // Show solution contents as they'd be in the solution's AGOL item
-      var icons = {
-        'Dashboard': 'images/dashboard16.svg',
-        'Feature Service': 'images/features16.svg',
-        'Group': 'images/group.svg',
-        'Web Map': 'images/maps16.svg',
-        'Web Mapping Application': 'images/apps16.svg'
-      };
-
-      var display = '<ul class="solutionList">';
-      hierarchy.forEach(function (item) {
-        var itemSection = solutionItems[item.id].itemSection;
-        var itemLabel = (itemSection.title || itemSection.name || item.type);
-        if (item.type === 'Feature Service') {
-          itemLabel += ' (' + item.idPart + ')';
-        }
-
-        var webpage = item.type === 'Group' ? 'group' : 'item';
-        display += '<li><img class="item-type-icon margin-right-quarter" src="' + icons[item.type] +
-          '" width="16" height="16" alt="">&nbsp;&nbsp;';
-        if (createLinks) {
-          display += '<a href="' + orgUrl + webpage + '.html?id=' + item.id + '" target="_blank">' +
-            itemLabel + '</a>';
-        } else {
-          display += itemLabel;
-        }
-
-        if (Array.isArray(item.dependencies) && item.dependencies.length > 0) {
-          display += createHierarchyDisplay(solutionItems, item.dependencies, createLinks, orgUrl);
-        }
-
-        display += '</li>';
-      });
-      display += '</ul>';
-      return display;
-    }
-
-    function createItemLinksDisplay(publishedId, orgUrl, portalUrl) {
-      var display = '<ul>';
-      display += '<li><a href="' + orgUrl + 'item.html?id=' + publishedId +
-        '" target="_blank">Item</a></li>';
-      display += '<li><a href="' + portalUrl + 'sharing/content/items/' + publishedId +
-        '?f=json" target="_blank">Item JSON</a></li>';
-      display += '<li><a href="' + portalUrl + 'sharing/content/items/' + publishedId +
-        '/data?f=json" target="_blank">Data JSON</a></li>';
-      display += '</ul>';
-
-      return display;
-    }
 
   });
   </script>
