--- a/demos/publish/index.html
+++ b/demos/publish/index.html
@@ -26,19 +26,19 @@
 
     <div class="section">
       <div class="section-title">Credentials in publishing organization</div>
-      <label for="username">Username:</label> <input type="text" id="username"></input>
-      <label for="password">Password:</label> <input type="password" id="password"></input>
+      <label for="username">Username:</label> <input type="text" id="username">
+      <label for="password">Password:</label> <input type="password" id="password">
     </div>
 
     <div class="section">
       <div class="section-title">Items to package into a single Solution (along with their dependencies)</div>
-      <input type="checkbox" onclick="onCheckboxClicked()" name="9bccd0fac5f3422c948e15c101c26934"></input>
+      <input type="checkbox" onclick="onCheckboxClicked()" name="9bccd0fac5f3422c948e15c101c26934">
         <label for="9bccd0fac5f3422c948e15c101c26934">ROW Permit Dashboard (Dashboard)</label> <br>
-      <input type="checkbox" onclick="onCheckboxClicked()" name="8974dec44d794311a69f5562659587e6"></input>
+      <input type="checkbox" onclick="onCheckboxClicked()" name="8974dec44d794311a69f5562659587e6">
         <label for="8974dec44d794311a69f5562659587e6">ROW Permit Manager (Web Mapping Application)</label> <br>
-      <input type="checkbox" onclick="onCheckboxClicked()" name="164831217e154849a731573e1855cb1a"></input>
+      <input type="checkbox" onclick="onCheckboxClicked()" name="164831217e154849a731573e1855cb1a">
         <label for="164831217e154849a731573e1855cb1a">ROW Permit Public Comment (Web Map)</label> <br>
-      <input type="checkbox" onclick="onCheckboxClicked()" name="6fc5992522d34f26b2210d17835eea21"></input>
+      <input type="checkbox" onclick="onCheckboxClicked()" name="6fc5992522d34f26b2210d17835eea21">
         <label for="6fc5992522d34f26b2210d17835eea21">ROW Permit Public Comment (Web Mapping Application)</label> <br>
       <br>
       <button id="createBtn" onclick="createSolutionFcn()" disabled="disabled">Create solution</button>
@@ -50,7 +50,7 @@
       <div id="createResults" style="display:none">
         <div id="createDisplay"></div>
         <br>
-        <label for="username">Name for published Solution</label> <input type="text" id="solutionName"></input><br>
+        <label for="username">Name for published Solution</label> <input type="text" id="solutionName"><br>
         <button id="publishBtn" onclick="publishSolutionFcn()">Publish solution</button>
       </div>
     </div>
